--- a/Music/nbproject/project.properties
+++ b/Music/nbproject/project.properties
@@ -29,6 +29,7 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-6.0.classpath}
 excludes=
+file.reference.mongodb-driver-3.2.1.jar=lib\\mongodb-driver-3.2.1.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -42,7 +43,8 @@ javac.classpath=\
     ${libs.jstl.classpath}:\
     ${libs.jsf20.classpath}:\
     ${libs.hibernate4-support.classpath}:\
-    ${libs.jpa2-persistence.classpath}
+    ${libs.jpa2-persistence.classpath}:\
+    ${file.reference.mongodb-driver-3.2.1.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
